Minor fix for padding on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@ body {
 
 @media (max-width: 850px) {
   body {
-    padding: 0.5vh 2.5vw;
+    padding: 0.5vh 5vw;
   }
 }
 
