--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -35,11 +35,11 @@
   }
 
   .width40 {
-    max-width: 90%;
+    max-width: 85%;
   }
 
   .width30 {
-    max-width: 90%;
+    max-width: 85%;
   }
 
   .blur {
